[gd_scene load_steps=8 format=3 uid="uid://bsk4n0tds5w5g"]

[ext_resource type="Texture2D" uid="uid://c3flupludo3ga" path="res://graphics/Platformer Art Deluxe/Base pack/Tiles/door_closedMid.png" id="1_jrnm8"]
[ext_resource type="Script" path="res://Scenes/Items/door.gd" id="1_pjv32"]
[ext_resource type="Texture2D" uid="uid://dicqtkpf06fka" path="res://graphics/Platformer Art Deluxe/Base pack/Tiles/door_closedTop.png" id="2_mwxmp"]
[ext_resource type="Texture2D" uid="uid://b8n4aioax5wmv" path="res://graphics/Platformer Art Deluxe/Base pack/Items/coinGold.png" id="4_qlu8s"]

[sub_resource type="LabelSettings" id="LabelSettings_ppadg"]
font_size = 21

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xudjc"]
size = Vector2(80, 104)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xyw00"]
lifetime_randomness = 0.55
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 12.85
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 25, 0)
linear_accel_min = 17.27
linear_accel_max = 100.0
scale_max = 3.0
color = Color(0.87825, 0.624491, 0.966069, 1)
hue_variation_max = 0.05
turbulence_enabled = true
turbulence_noise_strength = 6.79
turbulence_noise_speed_random = 0.95

[node name="Door" type="Node2D"]
script = ExtResource("1_pjv32")

[node name="SpriteMid" type="Sprite2D" parent="."]
position = Vector2(0, 20)
texture = ExtResource("1_jrnm8")

[node name="SpriteTop" type="Sprite2D" parent="."]
position = Vector2(0, -50)
texture = ExtResource("2_mwxmp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
offset_left = -40.0
offset_top = -88.0
offset_right = 40.0
offset_bottom = -58.0
pivot_offset = Vector2(64, 35)
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_qlu8s")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "25"
label_settings = SubResource("LabelSettings_ppadg")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_xudjc")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
visible = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_xyw00")
lifetime = 3.0
speed_scale = 1.5
randomness = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
